force-app/main/default/objects/AccountSkill__c/AccountSkill__c.object-meta.xml
<CustomObject>
    <label>Skill da Conta</label>
    <nameField>
        <displayFormat>ASK-{0}</displayFormat>
        <label>Numero da Skill da Conta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skills da Conta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>