force-app/main/default/objects/AccountSkill__c/fields/LevelXP__c.field-meta.xml
<CustomField>
    <fullName>LevelXP__c</fullName>
    <label>% XP no nível atual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>