force-app/main/default/objects/AccountSkill__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skill</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordType.Name</field>
            <operation>equals</operation>
            <value>Skill</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Contas da Skill</relationshipLabel>
    <relationshipName>SkillAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>